--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -6,23 +6,26 @@
   <table class="table table-hover">
     <thead>
       <tr>
+        <th> # </th>
         <th> Title </th>
         <th> Director </th>
         <th> Stars </th>
         <th> Synopsis </th>
-        <th colspan="2"></th>
+
       </tr>
     </thead>
 
     <tbody>
       <% @groups.each do |group| %>
       <tr>
+        <td> # </td>
         <td> <%= link_to(group.title, group_path(group)) %> </td>
         <td> <%= group.director %> </td>
         <td> <%= group.stars %> </td>
         <td> <%= group.synopsis %> </td>
-        <td> <%= link_to("Edit", edit_group_path(group), class: "btn btn-default btn-sm") %>
-             <%= link_to("Delete", groups_path(group),  class: "btn btn-default btn-sm",
+        <td>
+             <%= link_to("Edit", edit_group_path(group), class: "btn btn-default btn-sm") %>
+             <%= link_to("Delete", group_path(group),  class: "btn btn-default btn-sm",
                           method: :delete, data: { confirm: "Are you sure?" }) %>
         </td>
       </tr>
