--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -2,34 +2,5 @@
 <h2 class="text-center">新增电影</h2>
 
 <hr>
-
-<%= form_for @group do |f|%>
-
-<% if @group.errors.any? %>
-  <ul>
-    <% @group.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-  Title
-  <br>
-  <%= f.text_field :title %>
-  <br>
-  Director
-  <br>
-  <%= f.text_field :director %>
-  <br>
-  Stars
-  <br>
-  <%= f.text_field :stars %>
-  <br>
-  Synopsis
-  <br>
-  <%= f.text_area :synopsis %>
-  <br>
-
-  <%= f.submit "Submit", :disable_with => 'Submiting...' %>
-<% end %>
+  <%= render "form" %>
 </div>
