--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -1,29 +1,9 @@
-<%= form_for @group do |f| %>
-
-  <% if @group.errors.any? %>
-    <ul>
-      <% @group.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-    </ul>
-  <% end %>
-
-  Title
-  <br>
-  <%= f.text_field :title %>
-  <br>
-  Director
-  <br>
-  <%= f.text_field :director %>
-  <br>
-  Stars
-  <br>
-  <%= f.text_field :stars %>
-  <br>
-  Synopsis
-  <br>
-  <%= f.text_area :synopsis %>
-  <br>
-
-  <%= f.submit "Submit", :disable_with => 'Submiting...' %>
+<%= simple_form_for @group do |f| %>
+  <div class="form-group">
+    <%= f.input :title, input_html: { class: "form-control"} %>
+    <%= f.input :director, input_html: { class: "form-control"} %>
+    <%= f.input :stars, input_html: { class: "form-control"} %>
+    <%= f.input :synopsis, input_html: { class: "form-control"} %>
+  </div>
+    <%= f.submit "Submit", class: "btn btn-primary", data: { disable_with: "Submiting..." } %>
 <% end %>
