join & quit group action

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -2,9 +2,11 @@
   <div class="group">
     <span class="pull-right">
       <% if current_user && current_user.is_member_of?(@group) %>
-        <label class="label label-success"> Favorite Movie </label>
+        <label class="label label-success"> You can review! </label>
+          <%= link_to("Quit", quit_group_path(@group), method: :post, class: "btn btn-default") %>
         <% else %>
-        <label class="label label-warning"> No Favorite Movie </label>
+        <label class="label label-warning"> You can't review! </label>
+          <%= link_to("Favorite", join_group_path(@group), method: :post, class: "btn btn-default") %>
       <% end %>
     </span>
 
