--- a/app/views/account/groups/index.html.erb
+++ b/app/views/account/groups/index.html.erb
@@ -22,7 +22,7 @@
           <td> <%= link_to(group.title, group_path(group)) %> </td>
           <td> <%= group.director %> </td>
           <td> <%= group.stars %> </td>
-          <td> <%= group.synopsis %> </td>
+          <td> <%= render_group_synopsis(group) %> </td>
           <td> <%= group.posts.count %> </td>
           <td> <%= group.updated_at %> </td>
         </tr>
