--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -22,7 +22,7 @@
         <td> <%= link_to(group.title, group_path(group)) %> </td>
         <td> <%= group.director %> </td>
         <td> <%= group.stars %> </td>
-        <td> <%= simple_format(group.synopsis) %> </td>
+        <td> <%= render_group_synopsis(group) %> </td>
         <td> <%= group.user.email %> </td>
         <td>
           <% if current_user && current_user == group.user %>
