--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -16,23 +16,7 @@
     </thead>
 
     <tbody>
-      <% @groups.each do |group| %>
-      <tr>
-        <td> # </td>
-        <td> <%= link_to(group.title, group_path(group)) %> </td>
-        <td> <%= group.director %> </td>
-        <td> <%= group.stars %> </td>
-        <td> <%= render_group_synopsis(group) %> </td>
-        <td> <%= group.user.email %> </td>
-        <td>
-          <% if current_user && current_user == group.user %>
-             <%= link_to("Edit", edit_group_path(group), class: "btn btn-default btn-sm") %>
-             <%= link_to("Delete", group_path(group),  class: "btn btn-default btn-sm",
-                          method: :delete, data: { confirm: "Are you sure?" }) %>
-          <% end %>
-        </td>
-      </tr>
-      <% end %>
+      <%= render :partial => "group_item", :collection => @group, :as => :group %>
     </tbody>
   </table>
 </div>
