--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -16,7 +16,7 @@
     </thead>
 
     <tbody>
-      <%= render :partial => "group_item", :collection => @group, :as => :group %>
+      <%= render :partial => "group_item", :collection => @groups, :as => :group %>
     </tbody>
   </table>
 </div>
